--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,12 @@
-# Example FUNDING.yml file
-github: MohitSutharOfficial  # Your GitHub username for GitHub Sponsors
-patreon: your_patreon_username
-ko_fi: your_kofi_username
-buy_me_a_coffee: your_buymeacoffee_username
-custom: ["https://www.paypal.me/yourusername", "https://your-website.com/donate"]
+# GitHub Sponsors
+github: MohitSutharOfficial
+
+# Other platforms (add as needed)
+# patreon: your_patreon_username
+# ko_fi: your_kofi_username
+# buy_me_a_coffee: your_buymeacoffee_username
+# open_collective: your_open_collective_username
+# liberapay: your_liberapay_username
+
+# Custom donation URLs
+# custom: ["https://www.paypal.me/yourusername", "https://your-website.com/donate"]
